--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   go_router: ^13.0.0
   http: ^0.13.6
+  intl: ^0.18.1
+  flutter_staggered_animations: ^1.1.1
+  flutter_tts: ^3.8.5  # para leer texto a voz
+  translator: ^0.1.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +65,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/history.jpg
+  
+  generate: true
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
